Fixed details alignment

--- a/src/components/BetDetailsModal/components/BetDetailsPage/BetDetailsPage.module.scss
+++ b/src/components/BetDetailsModal/components/BetDetailsPage/BetDetailsPage.module.scss
@@ -30,3 +30,11 @@
     }
   }
 }
+
+.value {
+  justify-content: flex-end;
+
+  @include media-breakpoint-up(md) {
+    justify-content: flex-start;
+  }
+}
